--- a/contact.html
+++ b/contact.html
@@ -60,8 +60,7 @@
     <div class="container-fluid bg-secondary pb-0 pt-5 text-center">
       <div class="card w-90 p-4 m-auto">
         <h5 class="card-title text-primary">Let's Talk</h5>
-        <p>I’m based in South East London and can meet face-to-face for clients based in the surrounding areas.<br><br>If you’re not nearby then I'm open to working with clients based anywhere in the world, making use of videoconferencing tools, email, WhatsApp or good old-fashioned phone calls to get the job done.
-</p>
+        <p>I’m based in South East London and can meet face-to-face with clients based in the surrounding areas.<br><br>If you’re not nearby then I'm usually working remotely anyway, making use of videoconferencing tools, email, WhatsApp or good old-fashioned phone calls to get the job done.</p>
       </div>
     </div>
   </div>
