--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
   <meta http-equiv="content-type" content="text/html "charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description=" content="Experienced digital marketer based in London, supporting organistations with Web Analytics, CRO, SEO, PPC, Affiliate Marketing and Web Design.">
-  <title>Pricing | Freelance Digital Marketing Consultant</title>
+  <title>Services | Freelance Digital Marketing Consultant</title>
 
   <!-- Bootstrap + Custom CSS -->
   <link rel="stylesheet" href="./css/my-theme.css">
@@ -53,7 +53,7 @@
     <div class="jumbotron services-image jumbotron-fluid pl-1 pr-1 pb-5 bp-5 text-center">
       <br>
       <h1 class="text-center title mt-3">ONE MAN<br>MANY HATS</h1>
-      <p class="text-light subtitle mt-3 mb-4 pl-3 pr-3">AN ALL ROUND DIGITAL MARKETER AT YOUR SERVCE</p>
+      <p class="text-light subtitle mt-3 mb-4 pl-3 pr-3">AN ALL ROUND DIGITAL MARKETER AT YOUR SERVICE</p>
       <a href="contact.html"><button type="button" class="btn btn-primary small">Book A Free Consultation</button></a>
     </div>
   </div>
@@ -61,27 +61,28 @@
   <!-- SERVICES -->
 
 
-  <div class="container-fluid mb-5">
-    <div class="card w-75 m-auto text-center">
-      <div class="card-body p-5">
+  <div class="container-fluid">
+    <div class="card w-90 m-auto text-center services-intro">
+      <div class="card-body">
         <h5 class="card-title text-primary">Areas Of Expertise</h5>
-        <p class="card-text">I'm a digital marketing freelancer based in Sheffield. I specialise in social media, content and online advertising, but I'm happy enough doing anything digital. People hire me for a variety of purposes, sometimes they need full project management, sometimes they want me to create them a social campaign from scratch and sometimes they just want me to take a look at what they're already doing and see how it can be tweaked. I've been in the business for over 10 years. Early on in my career, I worked for a global tech startup which went to IPO. Since then, I've built up a reputation as a trusted freelancer, working for agencies and businesses alike. You can find out more about me and my work history on LinkedIn.</p>
+        <p class="card-text">I've picked up a range of skills throughout my career as a digital marketer. I'm confident working in the areas listed below, but if you need assistance with something else then please contact me. If I really am not able to assist, I'm always happy to point people in the direction of someone who can help.
         </div>
       </div>
     </div>
-
-
-
 
   <div class="container m-auto pl-5 pr-5 pt-3">
     <hr class="featurette-divider">
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="text-primary featurette-article-l">Digital Strategy</h2>
-        <p class="lead featurette-article-l">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p class="featurette-article-l">I analyse organisations using verified frameworks from the Digital Marketing Institute to assess your current strategy and identify opportunities and efficiencies. This includes the use of online tools to gain insight on competitors, measure customer behaviour and assess the market you're operating in.</p>
       </div>
-      <div class="col-md-5">
-        <img class="featurette-image img-fluid mx-auto" src="Assets/Carousel/digital-strategy-carousel.png" alt="Digital Strategy Image">
+      <div class="col-md-5 m-auto">
+        <picture>
+          <source media="(min-width: 992px)" srcset="Assets/Carousel/digital-strategy-carousel.png">
+          <source media="(min-width: 768px)" srcset="Assets/Carousel/digital-strategy-lap.png">
+          <img class="featurette-image img-fluid mx-auto" src="Assets/Carousel/digital-strategy-mob.png" alt="Digital Strategy Image">
+        </picture>
       </div>
     </div>
 
@@ -90,34 +91,14 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2 featurette-article-r">
         <h2 class="text-primary featurette-article-r">Web Analytics</h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p class="featurette-article-r">As a certified <a target="_blank" href="https://googleanalytics.com">Google Analytics</a> user, I can assist with measuring your on-site behaviour and channel performance. I also have extensive experience working with data visualisation tools like <a href="https://powerbi.com" target="_blank">Power BI</a> and <a target="_blank" href="https://tableau.com">Tableau</a>, and can combine data from various sources to provide insight on your digital marketing performance.</p>
       </div>
-      <div class="col-md-5 order-md-1">
-        <img class="featurette-image img-fluid mx-auto" src="Assets/Carousel/web-analytics-carousel.png" alt="Web Analytics Image">
-      </div>
-    </div>
-
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7">
-        <h2 class="text-primary featurette-article-l">Search Engine Optimisation</h2>
-        <p class="lead featurette-article-l">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-      </div>
-      <div class="col-md-5">
-        <img class="featurette-image img-fluid mx-auto" src="Assets/Carousel/search-marketing-carousel.png" alt="Search Marketing Image">
-      </div>
-    </div>
-
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7 order-md-2">
-        <h2 class="text-primary featurette-article-r">Web Design</h2>
-        <p class="lead featurette-article-r">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-      </div>
-      <div class="col-md-5 order-md-1">
-        <img class="featurette-image img-fluid mx-auto" src="Assets/Carousel/web-design-carousel.png" alt="Web Design Image">
+      <div class="col-md-5 order-md-1 m-auto">
+        <picture>
+          <source media="(min-width: 992px)" srcset="Assets/Carousel/web-analytics-carousel.png">
+          <source media="(min-width: 768px)" srcset="Assets/Carousel/web-analytics-lap.png">
+          <img class="featurette-image img-fluid mx-auto" src="Assets/Carousel/web-analytics-mob.png" alt="Web Analytics Image">
+        </picture>
       </div>
     </div>
 
@@ -126,25 +107,71 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="text-primary featurette-article-l">Email Marketing</h2>
-        <p class="lead featurette-article-l">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p class="featurette-article-l">I have experience with popular email marketing tools like <a target="_blank" href="https://www.mailchimp.com">MailChimp</a> and Oracle's <a target="_blank" href="https://www.oracle.com/uk/marketingcloud/products/marketing-automation/">Eloqua</a> platform, and can build and execute email campaigns for clients. I've also helped to build campaign delivery processes using tools like <a href="https://www.wrike.com" target="_blank">Wrike</a> that streamline the email marketing process.</p>
       </div>
-      <div class="col-md-5">
-        <img class="featurette-image img-fluid mx-auto" src="Assets/Carousel/email-marketing-carousel.png" alt="Email Marketing Image">
+      <div class="col-md-5 m-auto">
+        <picture>
+          <source media="(min-width: 992px)" srcset="Assets/Carousel/email-marketing-carousel.png">
+          <source media="(min-width: 768px)" srcset="Assets/Carousel/email-marketing-lap.png">
+          <img class="featurette-image img-fluid mx-auto" src="Assets/Carousel/email-marketing-mob.png" alt="Email Marketing Image">
+        </picture>
       </div>
     </div>
 
     <hr class="featurette-divider">
 
-    <div class="row featurette mb-5">
+    <div class="row featurette">
       <div class="col-md-7 order-md-2">
-        <h2 class="text-primary featurette-article-r">Pay Per Click</h2>
-        <p class="lead featurette-article-r">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <h2 class="text-primary featurette-article-r">Web Design</h2>
+        <p class="featurette-article-r">Need help with building landing pages? I have intermediate experience with HTML, CSS and the Bootstrap framework and can build responsive pages to help promote your services. They will all be tracked via your preferred web tracking tool to demonstrate their impact on your customers.</p>
       </div>
-      <div class="col-md-5 order-md-1">
-        <img class="featurette-image img-fluid mx-auto" src="Assets/Carousel/email-marketing-carousel.png" alt="Email Marketing Image">
+      <div class="col-md-5 order-md-1 m-auto">
+        <picture>
+          <source media="(min-width: 992px)" srcset="Assets/Carousel/web-design-carousel.png">
+          <source media="(min-width: 768px)" srcset="Assets/Carousel/web-design-lap.png">
+          <img class="featurette-image img-fluid mx-auto" src="Assets/Carousel/web-design-mob.png" alt="Web Design Image">
+        </picture>
       </div>
     </div>
 
+    <hr class="featurette-divider">
+
+    <div class="row featurette">
+      <div class="col-md-7">
+        <h2 class="text-primary featurette-article-l">Search Engine Optimisation</h2>
+        <p class="featurette-article-l">If you are looking to improve your search rank and target keywords, I can offer an on-site technical SEO audit to ensure your pages are well-structured and include the necessary content. I also create content strategies and build outreach campaigns to increase banklinks and boost rankings.</p>
+      </div>
+      <div class="col-md-5 m-auto">
+        <picture>
+          <source media="(min-width: 992px)" srcset="Assets/Carousel/search-marketing-carousel.png">
+          <source media="(min-width: 768px)" srcset="Assets/Carousel/seo-lap.png">
+          <img class="featurette-image img-fluid mx-auto" src="Assets/Carousel/seo-mob.png" alt="SEO Image">
+        </picture>
+      </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <div class="row featurette">
+      <div class="col-md-7 order-md-2">
+        <h2 class="text-primary featurette-article-r">Pay Per Click</h2>
+        <p class="featurette-article-r">I help clients to get the most out of their PPC budgets by setting up, executing and monitoring campaigns. If you have a web development team, I can work with them to optimise your PPC landing pages, raise quality scores and reduce costs on valuable keywords. Please get in touch to learn more about other optimisation techniques to consider.</p>
+      </div>
+      <div class="col-md-5 order-md-1 m-auto">
+        <picture>
+          <source media="(min-width: 992px)" srcset="Assets/Carousel/ppc-carousel.png">
+          <source media="(min-width: 768px)" srcset="Assets/Carousel/ppc-lap.png">
+          <img class="featurette-image img-fluid mx-auto" src="Assets/Carousel/ppc-mob.png" alt="PPC Image">
+        </picture>
+      </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <div class="container-fluid text-center pb-5 pt-3">
+      <h5 class="text-primary pb-3">Seen Something You Need?</h5>
+      <a href="contact.html"><button type="button" class="btn btn-primary small">Get In Touch</button></a>
+    </div>
 
 
   </div>
